[package]
name = "glasgow"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
color-eyre = { version = "0.6.3", default-features = false }
lsp-server = "0.7.6"
lsp = { package = "lsp-types", version = "0.97.0" }
serde_json = "1.0.120"
wgsl-spec = { version = "0.1.0", path = "../wgsl-spec", features = ["include"] }
serde = "1.0.204"
bstr = "1.9.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
