[package]
name = "glasgow"
version = "0.1.3"
edition = "2021"
authors = ["Christofer Nolander <christofer@nolander.me>"]
description = "Language Server for WGSL (WebGPU Shading Language)"
repository = "https://github.com/nolanderc/glasgow"
license-file = "LICENSE"

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
lsp-server = "0.7.6"
lsp = { package = "lsp-types", version = "0.97.0" }
serde_json = "1.0.120"
wgsl-spec = { version = "0.1.0", path = "../wgsl-spec", features = ["include"] }
serde = "1.0.204"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
anyhow = { version = "1.0.86", features = ["backtrace"] }

[dev-dependencies]
expect-test = "1.5.0"
indoc = "2.0.5"
